refactor: Show movie title in Shell title view, once the user reaches the bottom of the page.

--- a/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
@@ -47,6 +47,7 @@
                 x:Name="hScroll"
                 AbsoluteLayout.LayoutBounds="0,0,1,1"
                 AbsoluteLayout.LayoutFlags="All"
+                Scrolled="HScroll_Scrolled"
                 BackgroundColor="#22000000"
                 VerticalOptions="FillAndExpand">
                 <StackLayout
