--- a/SSFR_Movies/SSFR_Movies/Views/SearchPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/SearchPage.xaml
@@ -1,15 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Name="content"
     x:Class="SSFR_Movies.Views.SearchPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Visual="Material"
     xmlns:helpers="clr-namespace:SSFR_Movies.Helpers"
-    BackgroundColor="#161513">
+    x:Name="content"
+    BackgroundColor="#161513"
+    Visual="Material">
     <ContentPage.Content>
 
-        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" CompressedLayout.IsHeadless="True" BackgroundColor="#161513">
+        <StackLayout
+            BackgroundColor="#161513"
+            CompressedLayout.IsHeadless="True"
+            HorizontalOptions="FillAndExpand"
+            VerticalOptions="FillAndExpand">
 
             <StackLayout
                 x:Name="Bar"
@@ -47,14 +51,19 @@
 
             <ActivityIndicator
                 x:Name="activityIndicator"
-                HeightRequest="40"
                 BackgroundColor="#004b96"
-                VerticalOptions="CenterAndExpand"
+                HeightRequest="40"
                 HorizontalOptions="CenterAndExpand"
+                VerticalOptions="CenterAndExpand"
                 WidthRequest="40"
                 Color="White" />
 
-            <CollectionView x:Name="MoviesList" IsVisible="{Binding ListVisible}" SelectionMode="Single" Visual="Material">
+            <CollectionView
+                x:Name="MoviesList"
+                IsVisible="{Binding ListVisible}"
+                SelectionChanged="MovieSelected"
+                SelectionMode="Single"
+                Visual="Material">
                 <CollectionView.ItemsLayout>
                     <ListItemsLayout SnapPointsAlignment="End" SnapPointsType="MandatorySingle">
                         <x:Arguments>
@@ -65,7 +74,7 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout CompressedLayout.IsHeadless="True">
-                            <helpers:CustomViewCell HeightRequest="350" CompressedLayout.IsHeadless="True"/>
+                            <helpers:CustomViewCell CompressedLayout.IsHeadless="True" HeightRequest="350" />
                         </StackLayout>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
