--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -14,6 +14,7 @@
     <ContentPage.Content>
         <AbsoluteLayout
             x:Name="stack"
+            CompressedLayout.IsHeadless="True"
             AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
             AbsoluteLayout.LayoutFlags="All">
 
@@ -45,6 +46,7 @@
 
             <AbsoluteLayout
                 x:Name="scroll"
+                CompressedLayout.IsHeadless="True"
                 AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
                 AbsoluteLayout.LayoutFlags="All">
 
@@ -66,6 +68,8 @@
                     x:Name="MoviesList"
                     AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
                     AbsoluteLayout.LayoutFlags="All"
+                    RemainingItemsThreshold="19"
+                    RemainingItemsThresholdReachedCommand="{Binding RemainingItemsThresholdReachedCommand.Value}"
                     IsVisible="{Binding ListVisible}"
                     ItemsSource="{Binding AllMoviesList.Value}"
                     SelectionChanged="MovieSelected"
