--- a/SSFR_Movies/SSFR_Movies/Views/About.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/About.xaml
@@ -3,6 +3,7 @@
     x:Class="SSFR_Movies.Views.About"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:ffimage="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
     Title="SSFR Movies"
     BackgroundColor="#161513">
     <ContentPage.Content>
@@ -12,7 +13,7 @@
             VerticalOptions="FillAndExpand">
             <ScrollView VerticalOptions="FillAndExpand">
                 <StackLayout HorizontalOptions="Center" VerticalOptions="FillAndExpand">
-                    <Image
+                    <ffimage:CachedImage
                         Aspect="AspectFit"
                         HeightRequest="250"
                         HorizontalOptions="Center"
