--- a/SSFR_Movies/SSFR_Movies/ResourceDictionaries/GenResourceDictionary.xaml
+++ b/SSFR_Movies/SSFR_Movies/ResourceDictionaries/GenResourceDictionary.xaml
@@ -45,8 +45,7 @@
         <Setter Property="HasShadow" Value="True" />
     </Style>
     <!--  Style Image Card AllMoviesPage  -->
-    <Style x:Key="ImageInsideCardStyle" TargetType="Image">
-    </Style>
+    <Style x:Key="ImageInsideCardStyle" TargetType="Image" />
     <!--  Style StackLayout under Card image AllMoviesMape  -->
     <Style x:Key="StackUnderImageStyle" TargetType="Frame">
         <Setter Property="BackgroundColor" Value="#44312D2D" />
